# stegosaurusography

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierrc  .prettierrc.cjs  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.run/: Clippy.run.xml  Format.run.xml  Run Dev.run.xml  Run Tauri App.run.xml  Test.run.xml  Update.run.xml  upgrade.run.xml
src/: App.svelte  app.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: decoder.rs  encoded_file.rs  encoder.rs  error.rs  lib.rs  log_config.yaml  main.rs
src-tauri/src/file_types/: base_file.rs  encoded_file.rs  mod.rs  supported_file.rs
src-tauri/src/file_types/image/: decode.rs  encode.rs  mod.rs
src-tauri/src/file_types/png/: mod.rs
src-tauri/test_data/: story.txt
src/lib/: Greet.svelte
src/lib/app_bar/: AppBar.svelte
src/lib/encoder/: Encoder.svelte
src/lib/files/: FileInput.svelte  FileSaveInput.svelte  FileSelector.svelte
src/lib/navigation/: NavMenu.svelte
src/lib/shared/: FileInput.svelte  FileOpenInput.svelte  FileSaveInput.svelte
src/routes/: +layout.svelte  +page.svelte  styles.css
src/routes/decoder/: +page.svelte
src/routes/encoder/: +page.svelte
